# EoverPAnalysis

./: .gitignore  CMakeLists.txt  README.md
EoverPAnalysis/: EnergySumHelper.h  EoverPAnalysis.h  EoverPTreeAlgo.h  SecondariesTrees.h  TrackEnergyDecorator.h  TrackExtrapolationIsolationTool.h  TrackSorter.h
PileupPlotting/: EoP_simple_plotter.py  PileupHistogrammer.py  SampleSorter.py  execute_job.sh  prepare_submission.py
Plotting/: CopyPlotsToIntNote.py  CreatePlots.py  FillingScript.py  PtBinReweighting.sh  README.md  TruthReweighting.sh  fit_ep_histograms.py  setup.sh  submission_example.sh
Root/: EnergySumHelper.cxx  EoverPAnalysis.cxx  EoverPHists.cxx  EoverPHistsTrks.cxx  EoverPTreeAlgo.cxx  HistogramManagerD.cxx  LinkDef.h  SecondariesTrees.cxx  TrackEnergyDecorator.cxx  TrackExtrapolationIsolationTool.cxx  TrackSorter.cxx  TrackVertexSelection.cxx
data/: data17_13TeV.periodN_DetStatus-v98-pro21-16_Unknown_PHYS_StandardGRL_All_Good_25ns_ignore_GLOBAL_LOWMU.xml  data17_13TeV.periodN_DetStatus-v98-pro21-16_Unknown_PHYS_StandardGRL_All_Good_25ns_ignore_GLOBAL_LOWMU_for_specific_run341294.xml  ilumicalc_histograms_HLT_mb_sptrk_341294_OflLumi-13TeV-010.root  input_secondaries_daod.txt  input_test.txt  input_test_data.txt  ntup_prw_36102_JZ012.root
filelists/: GenerateListOfFiles.py  data15_13TeV_lowmu_all_rucio.txt  mc15_13TeV_lowmu_all_rucio.txt  test_list.txt
macros/: make_plots_1d_hists.py
root_numpy_plotting/: .~TestPlotting.ipynb  CellPlots.ipynb  ClusterPlots.ipynb  ClusterPlots.py  CreatePlots.py  FillingScript.py  README.md  SubmitBatchPlotting.py  TestPlotting.ipynb  login.sh  setup.sh  submission_example.sh  submission_example.txt
scripts/: config_eop_data_lowmu.py  config_eop_data_lowmu_runII_general.py  config_eop_data_pileup.py  config_eop_data_pileup_2016.py  config_eop_data_pileup_runII_general.py  config_eop_mc_lowmu.py  config_eop_mc_lowmu_runII_general.py  config_eop_mc_pileup.py  grid_eop.sh  (+14 more)
(+143 files in other folders)
